<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="12dp"
    tools:context=".Profile.Activity.EditDataProfile">





    <android.support.design.widget.TextInputLayout
        style="@style/Register_TextInputLayout">

        <AutoCompleteTextView
            android:id="@+id/name"
            android:inputType="textPersonName"
            android:hint="@string/text_hint_form_name"
            style="@style/Register_AutoCompleteTextView"
            android:drawableLeft="@drawable/ic_user2"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Register_TextInputLayout">

        <AutoCompleteTextView
            android:id="@+id/phone"
            android:inputType="textPersonName"
            android:hint="@string/text_hint_form_phone"
            style="@style/Register_AutoCompleteTextView"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Register_TextInputLayout">

        <AutoCompleteTextView
            android:id="@+id/email"
            android:inputType="textPersonName"
            android:hint="@string/text_hint_form_email"
            style="@style/Register_AutoCompleteTextView"
            android:drawableLeft="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Register_TextInputLayout">

        <AutoCompleteTextView
            android:id="@+id/adress"
            android:inputType="textPersonName"
            android:hint="@string/text_hint_form_adress"
            style="@style/Register_AutoCompleteTextView"
            android:drawableLeft="@drawable/ic_home"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        style="@style/Register_TextInputLayout">

        <AutoCompleteTextView
            android:id="@+id/user"
            android:inputType="textPersonName"
            android:hint="@string/text_hint_form_user"
            style="@style/Register_AutoCompleteTextView"
            android:drawableLeft="@drawable/ic_user2"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_edit_black_24dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"/>

    </android.support.design.widget.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:id="@+id/inputLayoutPassword">

            <AutoCompleteTextView
                android:id="@+id/password"
                android:inputType="textPassword"
                android:hint="@string/text_hint_form_password"
                style="@style/Register_AutoCompleteTextView"
                android:drawableLeft="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:enabled="false"
                />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/btnEditPasswordProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="8dp"
            android:gravity="center">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_edit_black_24dp"/>

        </LinearLayout>

    </FrameLayout>





</LinearLayout>